--- a/server/.env
+++ b/server/.env
@@ -10,4 +10,4 @@
 
 PORT=3001
 
-DATABASE_URL="postgresql://postgres:00000000@localhost:5432/tasklytics?schema=public"
+DATABASE_URL="postgresql://postgres:Ushibara1!@tpm-rds.cbi2wkw4i31t.ap-southeast-1.rds.amazonaws.com:5432/projectmanagement?schema=public"
