sign in sign up

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.11.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
@@ -17,6 +18,7 @@
     "@mui/x-data-grid": "^8.4.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@rsagiev/gantt-task-react-19": "^0.3.9",
+    "aws-amplify": "^6.15.3",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "dot": "^1.1.3",
