--- a/client/.env.local
+++ b/client/.env.local
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_BASE_URL=http://localhost:3001
+NEXT_PUBLIC_COGNITO_USER_POOL_ID = "ap-southeast-1_aleUPSTcm"
+NEXT_PUBLIC_COGNITO_USER_POOL_CLIENT_ID = "5lo01k2jgv4d0fh86hj142hgr6"
